--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7fbf7bc9",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bd2365f7",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3c9464d2",
    "metadata": {},
    "outputs": [
@@ -184,15 +184,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides   \n",
-       "0            7.4              0.70         0.00             1.9      0.076  \\\n",
+       "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0            7.4              0.70         0.00             1.9      0.076   \n",
        "1            7.8              0.88         0.00             2.6      0.098   \n",
        "2            7.8              0.76         0.04             2.3      0.092   \n",
        "3           11.2              0.28         0.56             1.9      0.075   \n",
        "4            7.4              0.70         0.00             1.9      0.076   \n",
        "\n",
-       "   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates   \n",
-       "0                 11.0                  34.0   0.9978  3.51       0.56  \\\n",
+       "   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                 11.0                  34.0   0.9978  3.51       0.56   \n",
        "1                 25.0                  67.0   0.9968  3.20       0.68   \n",
        "2                 15.0                  54.0   0.9970  3.26       0.65   \n",
        "3                 17.0                  60.0   0.9980  3.16       0.58   \n",
@@ -206,7 +206,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bed3cf8b",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8240e4fe",
    "metadata": {},
    "outputs": [
@@ -463,8 +463,8 @@
        "</div>"
       ],
       "text/plain": [
-       "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides   \n",
-       "0               7.4             0.700         0.00             1.9      0.076  \\\n",
+       "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0               7.4             0.700         0.00             1.9      0.076   \n",
        "1               7.8             0.880         0.00             2.6      0.098   \n",
        "2               7.8             0.760         0.04             2.3      0.092   \n",
        "3              11.2             0.280         0.56             1.9      0.075   \n",
@@ -476,8 +476,8 @@
        "1597            5.9             0.645         0.12             2.0      0.075   \n",
        "1598            6.0             0.310         0.47             3.6      0.067   \n",
        "\n",
-       "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates   \n",
-       "0                    11.0                  34.0  0.99780  3.51       0.56  \\\n",
+       "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                    11.0                  34.0  0.99780  3.51       0.56   \n",
        "1                    25.0                  67.0  0.99680  3.20       0.68   \n",
        "2                    15.0                  54.0  0.99700  3.26       0.65   \n",
        "3                    17.0                  60.0  0.99800  3.16       0.58   \n",
@@ -505,7 +505,7 @@
        "[1359 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "659d054f",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a9d9f1bd",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0ddda53f",
    "metadata": {},
    "outputs": [
@@ -1367,8 +1367,8 @@
        "</div>"
       ],
       "text/plain": [
-       "    fixed acidity  volatile acidity  citric acid  residual sugar  chlorides   \n",
-       "0             7.4             0.700         0.00             1.9      0.076  \\\n",
+       "    fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0             7.4             0.700         0.00             1.9      0.076   \n",
        "1             7.8             0.880         0.00             2.6      0.098   \n",
        "2             7.8             0.760         0.04             2.3      0.092   \n",
        "3            11.2             0.280         0.56             1.9      0.075   \n",
@@ -1419,8 +1419,8 @@
        "48            6.4             0.400         0.23             1.6      0.066   \n",
        "49            5.6             0.310         0.37             1.4      0.074   \n",
        "\n",
-       "    free sulfur dioxide  total sulfur dioxide  density    pH  sulphates   \n",
-       "0                  11.0                  34.0   0.9978  3.51       0.56  \\\n",
+       "    free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                  11.0                  34.0   0.9978  3.51       0.56   \n",
        "1                  25.0                  67.0   0.9968  3.20       0.68   \n",
        "2                  15.0                  54.0   0.9970  3.26       0.65   \n",
        "3                  17.0                  60.0   0.9980  3.16       0.58   \n",
@@ -1524,7 +1524,7 @@
        "49      9.2        0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,19 +1539,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c5a104bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x1202970d0>,\n",
-       "  <matplotlib.axis.XTick at 0x1202970a0>],\n",
+       "([<matplotlib.axis.XTick at 0x286121f90>,\n",
+       "  <matplotlib.axis.XTick at 0x286121f60>],\n",
        " [Text(0, 0, 'Bad'), Text(1, 0, 'Good')])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1575,20 +1575,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a2c1b605",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "quality\n",
        "1    855\n",
        "0    744\n",
-       "Name: count, dtype: int64"
+       "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "08800d24",
    "metadata": {},
    "outputs": [],
@@ -1614,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "210d3bdf",
    "metadata": {},
    "outputs": [
@@ -1635,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "956f58f6",
    "metadata": {},
    "outputs": [],
@@ -1655,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "51197af6",
    "metadata": {},
    "outputs": [],
@@ -1668,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "9b5d31ca",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1680,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "beb8e496",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "7f58c840",
    "metadata": {},
    "outputs": [
@@ -1770,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "33af8073",
    "metadata": {},
    "outputs": [
@@ -1806,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d38f0930",
    "metadata": {},
    "outputs": [
@@ -1826,7 +1825,57 @@
      "text": [
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on http://127.0.0.1:8050\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/deps/polyfill@7.v2_9_3m1684599987.12.1.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/dcc/dash_core_components.v2_9_2m1684599987.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/dcc/dash_core_components-shared.v2_9_2m1684599987.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/dash-renderer/build/dash_renderer.v2_9_3m1684599987.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/deps/react@16.v2_9_3m1684599987.14.0.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/deps/prop-types@15.v2_9_3m1684599987.8.1.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/deps/react-dom@16.v2_9_3m1684599987.14.0.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/html/dash_html_components.v2_0_11m1684599987.min.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/dash_table/bundle.v5_2_4m1684599987.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\" 200 -\n",
+      "[2023-05-20 22:34:15,680] ERROR in app: Exception on /_dash-update-component [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/flask/app.py\", line 2190, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/flask/app.py\", line 1486, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/flask/app.py\", line 1484, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/flask/app.py\", line 1469, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/dash/dash.py\", line 1283, in dispatch\n",
+      "    ctx.run(\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/dash/_callback.py\", line 450, in add_context\n",
+      "    output_value = func(*func_args, **func_kwargs)  # %% callback invoked %%\n",
+      "  File \"/var/folders/x2/zc5k_cm94tqdq5h_t8g_5_rm0000gn/T/ipykernel_28070/3735546960.py\", line 113, in predict_quality\n",
+      "    prediction = logreg_model.predict(input_features)[0]\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/sklearn/linear_model/_base.py\", line 419, in predict\n",
+      "    scores = self.decision_function(X)\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/sklearn/linear_model/_base.py\", line 400, in decision_function\n",
+      "    X = self._validate_data(X, accept_sparse=\"csr\", reset=False)\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/sklearn/base.py\", line 565, in _validate_data\n",
+      "    X = check_array(X, input_name=\"X\", **check_params)\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/sklearn/utils/validation.py\", line 921, in check_array\n",
+      "    _assert_all_finite(\n",
+      "  File \"/Users/karanrasathurai/anaconda3/lib/python3.10/site-packages/sklearn/utils/validation.py\", line 161, in _assert_all_finite\n",
+      "    raise ValueError(msg_err)\n",
+      "ValueError: Input X contains NaN.\n",
+      "LogisticRegression does not accept missing values encoded as NaN natively. For supervised learning, you might want to consider sklearn.ensemble.HistGradientBoostingClassifier and Regressor which accept missing values encoded as NaNs natively. Alternatively, it is possible to preprocess the data, for instance by using an imputer transformer in a pipeline or drop samples with missing values. See https://scikit-learn.org/stable/modules/impute.html You can find a list of all estimators that handle NaN values at the following page: https://scikit-learn.org/stable/modules/impute.html#estimators-that-handle-nan-values\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"\u001b[35m\u001b[1mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 500 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:15] \"GET /_favicon.ico?v=2.9.3 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:16] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:49] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:34:55] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:35:02] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/May/2023 22:35:06] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -1835,6 +1884,7 @@
     "# external_stylesheets = ['https://fonts.googleapis.com/css2?family=Open+Sans&display=swap']\n",
     "\n",
     "app = dash.Dash(__name__)\n",
+    "server = app.server\n",
     "# app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
     "\n",
     "# Define the layout of the dashboard\n",
@@ -1961,15 +2011,49 @@
    "execution_count": null,
    "id": "1830e8d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python ('pytorch_env')' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: 'conda install -n pytorch_env ipykernel --update-deps --force-reinstall'"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python ('pytorch_env')' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: 'conda install -n pytorch_env ipykernel --update-deps --force-reinstall'"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.9.6 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# sample_data = [9.1, 0.4, 0.5, 1.8, 0.071, 7.0, 16.0, 0.9946, 3.21, 0.69, 12.5]])"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ed69033dcf95bf03c49614e5fe4e96f21774bed12a1dae221247a7de4d30fa71"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.11 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1983,7 +2067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
