--- a/E18168_Lab03_Wine_Quality_Classification_using_Logistic_Regression.ipynb
+++ b/E18168_Lab03_Wine_Quality_Classification_using_Logistic_Regression.ipynb
@@ -872,7 +872,7 @@
       ],
       "source": [
         "sns.set(rc = {'figure.figsize':(12,8)})\n",
-        "sns.heatmap(data.corr(), annot = True, fmt='.2g',cmap= 'Blues')"
+        "sns.heatmap(data.corr(), annot = True, fmt='.2g',cmap= 'YlGnBu')"
       ]
     },
     {
